Name:                bya-scheme
Version:             0.1
Cabal-version:       >=1.20.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            An implementation of the Build You a Scheme project
Description:         An implementation of the Build You a Scheme project
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/BYA-Scheme.git

Executable bya-scheme
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    parsec >= 3.1
  GHC-Options:
    -Wall
    -fno-warn-name-shadowing

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    HUnit             >= 1.2,
    tasty             >= 0.10,
    tasty-hunit       >= 0.9
